[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-client-api"
version = "25.1"
authors = [
  { name="ikmalsaid", email="ikmalsaid@gmail.com" },
]
description = "A hostable web API for Atelier clients."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "flask",
  "atelier-client"
]
keywords = [
  "atelier-client-api",
  "atelier_client_api"
]

[project.urls]
Homepage = "https://github.com/ikmalsaid/atelier-client-api"
Issues = "https://github.com/ikmalsaid/atelier-client-api/issues"